--- a/streamlit_colab.ipynb
+++ b/streamlit_colab.ipynb
@@ -11,6 +11,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 📊 CaSR v3.1 Downloader – Streamlit App\n",
+        "\n",
+        "This Colab notebook runs a **Streamlit web app** for downloading and interacting with the **CaSR v3.1 dataset**.  \n",
+        "When you run the code cell below:\n",
+        "\n",
+        "1. It will install the required dependencies.  \n",
+        "2. Start the Streamlit app in the background.  \n",
+        "3. Create a secure **Cloudflare tunnel** to give you a **public link** to the app.  \n",
+        "\n",
+        "👉 **How to use:**\n",
+        "- Simply run the next code cell.  \n",
+        "- Wait until you see a message saying:  \n",
+        "  **“🎉 Success! Your app is available at:”**  \n",
+        "- Click on the provided link (ending in `.trycloudflare.com`) to open the app in a new tab.  \n",
+        "\n",
+        "⚠️ **Note:** It may take 1–2 minutes for the app to fully initialize.\n"
+      ],
+      "metadata": {
+        "id": "AxSudsCd42NP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "X42T43xF4jtq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/rarabzad/CaSR-v3.1-downloader.git\n",
@@ -99,7 +130,7 @@
       "metadata": {
         "id": "9J4tR3LafJcu"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     }
   ],
