--- a/streamlit_colab.ipynb
+++ b/streamlit_colab.ipynb
@@ -25,10 +25,12 @@
         "👉 **How to use:**\n",
         "- Simply run the next code cell.  \n",
         "- Wait until you see a message saying:  \n",
-        "  **“🎉 Success! Your app is available at:”**  \n",
+        "  **"🎉 Success! Your app is available at:"**  \n",
         "- Click on the provided link (ending in `.trycloudflare.com`) to open the app in a new tab.  \n",
         "\n",
-        "⚠️ **Note:** It may take 1–2 minutes for the app to fully initialize.\n"
+        "⚠️ **Note:** It may take 1–2 minutes for the app to fully initialize.\n",
+        "\n",
+        "⚠️ **Important:** If you run this cell multiple times, please **restart the runtime** first (Runtime → Restart Runtime) to avoid directory errors.\n"
       ],
       "metadata": {
         "id": "AxSudsCd42NP"
@@ -44,13 +46,24 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "\n",
+        "# Clean up any existing directories and reset to root\n",
+        "os.chdir('/content')\n",
+        "!rm -rf CaSR-v3.1-downloader\n",
+        "\n",
+        "# Clone the repository\n",
         "!git clone https://github.com/rarabzad/CaSR-v3.1-downloader.git\n",
-        "%cd CaSR-v3.1-downloader\n",
-        "!pip install -r requirements.txt\n",
+        "%cd /content/CaSR-v3.1-downloader\n",
+        "\n",
+        "# Install requirements\n",
+        "!pip install -q -r requirements.txt\n",
+        "\n",
+        "# Download and install cloudflared\n",
         "!wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb\n",
         "!dpkg -i cloudflared-linux-amd64.deb\n",
         "\n",
-        "import threading, os, time, requests\n",
+        "import threading, time, requests\n",
         "import subprocess, re\n",
         "from IPython.display import display, HTML\n",
         "\n",
@@ -78,54 +91,53 @@
         "# Wait for Streamlit to be ready\n",
         "if not wait_for_streamlit():\n",
         "    print(\"❌ Streamlit failed to start properly\")\n",
-        "    exit()\n",
-        "\n",
-        "# Now start the tunnel\n",
-        "print(\"🌐 Creating tunnel...\")\n",
-        "proc = subprocess.Popen(\n",
-        "    [\"cloudflared\", \"tunnel\", \"--url\", \"http://localhost:8501\", \"--no-autoupdate\"],\n",
-        "    stdout=subprocess.PIPE,\n",
-        "    stderr=subprocess.STDOUT,\n",
-        "    text=True\n",
-        ")\n",
-        "\n",
-        "tunnel_url = None\n",
-        "max_attempts = 10\n",
-        "attempt = 0\n",
-        "\n",
-        "for line in proc.stdout:\n",
-        "    print(f\"Cloudflare: {line.strip()}\")  # Debug output\n",
-        "    if \"trycloudflare.com\" in line:\n",
-        "        match = re.search(r\"https://[a-zA-Z0-9.-]+\\.trycloudflare\\.com\", line)\n",
-        "        if match:\n",
-        "            tunnel_url = match.group(0)\n",
-        "            break\n",
-        "    attempt += 1\n",
-        "    if attempt > max_attempts:\n",
-        "        break\n",
-        "\n",
-        "if tunnel_url:\n",
-        "    print(f\"\\n🎉 Success! Your app is available at:\")\n",
-        "    display(HTML(f\"\"\"\n",
-        "        <div style=\"padding: 20px; background-color: #f0f8ff; border: 2px solid #4CAF50; border-radius: 10px; margin: 10px 0;\">\n",
-        "            <h3 style=\"color: #2E7D32;\">Your Streamlit App is Ready!</h3>\n",
-        "            <a href=\"{tunnel_url}\" target=\"_blank\" style=\"font-size:18px; color: #1976D2; text-decoration: none;\">\n",
-        "                🚀 {tunnel_url}\n",
-        "            </a>\n",
-        "        </div>\n",
-        "    \"\"\"))\n",
         "else:\n",
-        "    print(\"⚠️ Could not detect the tunnel URL. Checking if Streamlit is accessible...\")\n",
-        "    # Try to access Streamlit directly\n",
-        "    try:\n",
-        "        response = requests.get(\"http://localhost:8501\")\n",
-        "        if response.status_code == 200:\n",
-        "            print(\"✅ Streamlit is running on localhost:8501\")\n",
-        "            print(\"❌ But tunnel creation failed. Try running the cloudflared command manually.\")\n",
-        "        else:\n",
-        "            print(\"❌ Streamlit is not responding properly\")\n",
-        "    except Exception as e:\n",
-        "        print(f\"❌ Error checking Streamlit: {e}\")"
+        "    # Now start the tunnel\n",
+        "    print(\"🌐 Creating tunnel...\")\n",
+        "    proc = subprocess.Popen(\n",
+        "        [\"cloudflared\", \"tunnel\", \"--url\", \"http://localhost:8501\", \"--no-autoupdate\"],\n",
+        "        stdout=subprocess.PIPE,\n",
+        "        stderr=subprocess.STDOUT,\n",
+        "        text=True\n",
+        "    )\n",
+        "\n",
+        "    tunnel_url = None\n",
+        "    max_attempts = 10\n",
+        "    attempt = 0\n",
+        "\n",
+        "    for line in proc.stdout:\n",
+        "        print(f\"Cloudflare: {line.strip()}\")  # Debug output\n",
+        "        if \"trycloudflare.com\" in line:\n",
+        "            match = re.search(r\"https://[a-zA-Z0-9.-]+\\.trycloudflare\\.com\", line)\n",
+        "            if match:\n",
+        "                tunnel_url = match.group(0)\n",
+        "                break\n",
+        "        attempt += 1\n",
+        "        if attempt > max_attempts:\n",
+        "            break\n",
+        "\n",
+        "    if tunnel_url:\n",
+        "        print(f\"\\n🎉 Success! Your app is available at:\")\n",
+        "        display(HTML(f\"\"\"\n",
+        "            <div style=\"padding: 20px; background-color: #f0f8ff; border: 2px solid #4CAF50; border-radius: 10px; margin: 10px 0;\">\n",
+        "                <h3 style=\"color: #2E7D32;\">Your Streamlit App is Ready!</h3>\n",
+        "                <a href=\"{tunnel_url}\" target=\"_blank\" style=\"font-size:18px; color: #1976D2; text-decoration: none;\">\n",
+        "                    🚀 {tunnel_url}\n",
+        "                </a>\n",
+        "            </div>\n",
+        "        \"\"\"))\n",
+        "    else:\n",
+        "        print(\"⚠️ Could not detect the tunnel URL. Checking if Streamlit is accessible...\")\n",
+        "        # Try to access Streamlit directly\n",
+        "        try:\n",
+        "            response = requests.get(\"http://localhost:8501\")\n",
+        "            if response.status_code == 200:\n",
+        "                print(\"✅ Streamlit is running on localhost:8501\")\n",
+        "                print(\"❌ But tunnel creation failed. Try running the cloudflared command manually.\")\n",
+        "            else:\n",
+        "                print(\"❌ Streamlit is not responding properly\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"❌ Error checking Streamlit: {e}\")"
       ],
       "metadata": {
         "id": "9J4tR3LafJcu"
