Remove checkmarks from markdown and comments

--- a/CaSR_v3_1_streamlit_app.ipynb
+++ b/CaSR_v3_1_streamlit_app.ipynb
@@ -30,7 +30,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "## 🚀 Run the CaSR v3.1 Downloader Streamlit App on Google Colab\n",
+        "## Run the CaSR v3.1 Downloader Streamlit App on Google Colab\n",
         "\n",
         "You can easily run the **CaSR v3.1 Downloader** Streamlit web app directly from **Google Colab**, without needing to host it locally or deploy it permanently.\n",
         "\n",
@@ -39,7 +39,7 @@
         "---\n",
         "\n",
         "1. Open a new notebook in **Google Colab**:\n",
-        "   👉 [https://colab.research.google.com](https://colab.research.google.com)\n",
+        "   [https://colab.research.google.com](https://colab.research.google.com)\n",
         "\n",
         "2. Copy and paste the entire code block below into a single cell.\n",
         "\n",
@@ -47,17 +47,17 @@
         "   Wait about **30–60 seconds** until you see a link like:\n",
         "\n",
         "   ```\n",
-        "   🌍 Streamlit app is live: https://example-xyz.trycloudflare.com\n",
+        "   Streamlit app is live: https://example-xyz.trycloudflare.com\n",
         "   ```\n",
         "\n",
         "   The app should open automatically in a new tab — if not, just click the link.\n",
         "\n",
         "### ⚙️ Notes\n",
         "\n",
-        "* ⏳ **Runtime:** Keep the Colab session active — closing the tab or timing out will stop the app.\n",
-        "* 🌩 **Cloudflare tunnel** is temporary — each time you restart, a new URL is generated.\n",
-        "* 🔒 This setup doesn’t require a Cloudflare account, but for long-term hosting you can create a named tunnel.\n",
-        "* 🧠 Works best in **Chrome** or **Edge** (some popup blockers may prevent auto-tab opening).\n"
+        "* **Runtime:** Keep the Colab session active — closing the tab or timing out will stop the app.\n",
+        "* **Cloudflare tunnel** is temporary — each time you restart, a new URL is generated.\n",
+        "* This setup doesn’t require a Cloudflare account, but for long-term hosting you can create a named tunnel.\n",
+        "* Works best in **Chrome** or **Edge** (some popup blockers may prevent auto-tab opening).\n"
       ],
       "metadata": {
         "id": "pOB2--x40ZNB"
@@ -66,12 +66,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# ✅ Install dependencies\n",
+        "# Install dependencies\n",
         "!wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb\n",
         "!dpkg -i cloudflared-linux-amd64.deb\n",
         "!pip install -q streamlit\n",
         "\n",
-        "# ✅ Clean and clone repo\n",
+        "# Clean and clone repo\n",
         "!rm -rf CaSR-v3.1-downloader\n",
         "!git clone https://github.com/rarabzad/CaSR-v3.1-downloader.git\n",
         "%cd CaSR-v3.1-downloader\n",
@@ -92,21 +92,21 @@
         "        match = re.search(r\"(https://[0-9a-zA-Z-]+\\.trycloudflare\\.com)\", line)\n",
         "        if match:\n",
         "            public_url = match.group(1)\n",
-        "            display(HTML(f\"<h3>🌍 Streamlit app is live: \"\n",
+        "            display(HTML(f\"<h3> Streamlit app is live: \"\n",
         "                         f\"<a href='{public_url}' target='_blank'>{public_url}</a></h3>\"))\n",
         "            webbrowser.open_new_tab(public_url)\n",
         "            break\n",
         "        print(line, end=\"\")\n",
         "\n",
-        "# ✅ Start Cloudflare tunnel in background\n",
+        "# Start Cloudflare tunnel in background\n",
         "threading.Thread(target=run_cloudflared, daemon=True).start()\n",
         "time.sleep(5)\n",
         "\n",
-        "# ✅ Start Streamlit app\n",
+        "# Start Streamlit app\n",
         "!streamlit run app.py --server.port 8501\n",
         "\n",
         "if public_url:\n",
-        "    display(HTML(f\"<h3>✅ App is live: <a href='{public_url}' target='_blank'>{public_url}</a></h3>\"))\n",
+        "    display(HTML(f\"<h3> App is live: <a href='{public_url}' target='_blank'>{public_url}</a></h3>\"))\n",
         "    display(Javascript(f\"window.open('{public_url}');\"))\n",
         "else:\n",
         "    print(\"No Cloudflare URL detected yet — wait a few seconds.\")"
