Remove emoji from notes section header

--- a/CaSR_v3_1_streamlit_app.ipynb
+++ b/CaSR_v3_1_streamlit_app.ipynb
@@ -52,7 +52,7 @@
         "\n",
         "   The app should open automatically in a new tab — if not, just click the link.\n",
         "\n",
-        "### ⚙️ Notes\n",
+        "### Notes\n",
         "\n",
         "* **Runtime:** Keep the Colab session active — closing the tab or timing out will stop the app.\n",
         "* **Cloudflare tunnel** is temporary — each time you restart, a new URL is generated.\n",
